titre et suppression animate.css

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-  <ion-title>Bienvenue sur AppFood</ion-title>
+  <ion-title>Bienvenue sur FoodApp</ion-title>
   </ion-toolbar>
   </ion-header>
 
